fix css misalignment, removed test button

--- a/src/app/components/ChatTestUsersWrapper/chattestuserswrapper.scss
+++ b/src/app/components/ChatTestUsersWrapper/chattestuserswrapper.scss
@@ -64,6 +64,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         width: 100%;
         margin: 1em 0;
         gap: 1em;
